Fix unwanted display of charts scrollbars

--- a/src/static/css/charts.css
+++ b/src/static/css/charts.css
@@ -1,12 +1,13 @@
 .chart {
     background-color: #f2f0f0;
-    overflow: scroll;
     margin-bottom: 30px;
     padding: 30px 0;
     border-radius: 2px;
     text-align: center;
 }
-
+.linechart{
+    overflow-y: auto;
+}
 .chart-cell-left {
     margin-right: 10px;
 }
